chore: special thanks for gotemplate.io

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
         <meta property="og:title" content="Kubernetes Secret Preview">
         <meta property="og:description" content="Quickly test and visualize your Go templates live. Template and data never leave your browser. Requires WebAssembly support.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://michaelact.github.io/kubernetes-secret-editor">
+        <meta property="og:url" content="https://michael-act.github.io/kubernetes-secret-editor">
 
-        <link rel="icon" type="image/x-icon" href="https://michaelact.github.io/kubernetes-secret-editor/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="https://michael-act.github.io/kubernetes-secret-editor/favicon.ico">
 
         <style>
             * {
@@ -96,7 +96,7 @@
                 <h1 style="font-size:1.8rem;font-weight:600">Kubernetes Secret Preview</h1>
                 <span style="font-size:.9rem;opacity:.9">
                     <p style="margin-top:.5rem">Quickly test and visualize your <a href="https://kubernetes.io/docs/concepts/configuration/secret/" target="_blank" style="color:#FA58B6">Kubernetes Secret</a> live.</p>
-                    <p style="margin-top:.2rem"><a href="https://michaelact.github.io/kubernetes-secret-editor/what-is-this/" style="color:#FA58B6">What is this?</a> – <a href="https://michaelact.github.io/kubernetes-secret-editor/how-does-this-work/" style="color:#FA58B6">How does this work?</a></p>
+                    <p style="margin-top:.2rem"><a href="https://michael-act.github.io/kubernetes-secret-editor/what-is-this/" style="color:#FA58B6">What is this?</a> – <a href="https://github.com/michaelact/kubernetes-secret-editor" style="color:#FA58B6">How does this work?</a></p>
                 </span>
             </div>
         </section>
@@ -108,7 +108,7 @@
                     <h2 id="error-enc-txt" style="color:#FA5958;margin-left:auto"></h2>
                     <img id="error-enc-img" src="error.svg" style="display:none;margin-left:.25rem;width:1rem;height:1rem">
                 </span>
-                <div class="textarea" style="height:calc(100% - 1.4rem);margin-bottom:1rem"><textarea id="input-enc" style="height:100%" placeholder="Please provide your encoded Kubernetes secret here..." oninput="DecodeSecret();"></textarea></div>
+                <div class="textarea" style="height:calc(100% - 1.4rem);margin-bottom:1rem"><textarea id="input-enc" style="height:100%" placeholder="Please provide your encoded Kubernetes Secret here..." oninput="DecodeSecret();"></textarea></div>
             </div>
             <div style="margin:0 auto;height:100%;width:calc(50% - .5rem)">
                 <span style="height:1.4rem;display:flex;align-items:flex-start;padding:0 .5rem">
@@ -118,11 +118,11 @@
                     <h2 style="opacity:.75;margin-left:auto">powered by</h2>
                     <a href="https://webassembly.org/" target="_blank"><img src="webassembly.svg" style="display:inline-block;margin-left:.25rem;width:1rem;height:1rem"></a>
                 </span>
-                <div class="textarea-light" style="height:calc(100% - 1.4rem)"><textarea id="input-dec" placeholder="Please provide your decoded Kubernetes secret here..." oninput="EncodeSecret();"></textarea></div>
+                <div class="textarea-light" style="height:calc(100% - 1.4rem)"><textarea id="input-dec" placeholder="Please provide your decoded Kubernetes Secret here..." oninput="EncodeSecret();"></textarea></div>
             </div>
         </section>
         <section id="footer" style="padding-top:0;font-size:.8rem">
-            <p style="text-align: center;opacity:.67">Website theme are taken from <a href="https://gotemplate.io/" target="_blank">gotemplate.io</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://michaelact.github.io/kubernetes-secret-editor/privacy/" target="_blank">Privacy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://michaelact.github.io/kubernetes-secret-editor/what-is-this/" target="_blank">About</a></p>
+            <p style="text-align: center;opacity:.67">Our website themes from gotemplate.io. Special thanks for their fantastic theme! &nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://michael-act.github.io/kubernetes-secret-editor/privacy/" target="_blank">Privacy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://michael-act.github.io/kubernetes-secret-editor/what-is-this/" target="_blank">About</a></p>
         </section>
 
 </body></html>
