fix: typo description and github repository

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,13 @@
         <meta name="robots" content="index, follow">
         <meta name="format-detection" content="telephone=no">
         <meta name="google" content="nositelinkssearchbox">
-        <link rel="canonical" href="https://gotemplate.io/">
+        <link rel="canonical" href="https://michael-act.github.io/kubernetes-secret-editor">
 
         <title>Kubernetes Secret Editor</title>
-        <meta name="description" content="Quickly test and visualize your Kubernetes Secret live. Template and data never leave your browser. Requires WebAssembly support.">
+        <meta name="description" content="Quickly test and visualize your Kubernetes Secret live. YAML and data never leave your browser. Requires WebAssembly support.">
 
         <meta property="og:title" content="Kubernetes Secret Preview">
-        <meta property="og:description" content="Quickly test and visualize your Go templates live. Template and data never leave your browser. Requires WebAssembly support.">
+        <meta property="og:description" content="Quickly test and visualize your Kubernetes Secret live. YAML and data never leave your browser. Requires WebAssembly support.">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://michael-act.github.io/kubernetes-secret-editor">
 
@@ -112,7 +112,7 @@
                 <h1 style="font-size:1.8rem;font-weight:600">Kubernetes Secret Preview</h1>
                 <span style="font-size:.9rem;opacity:.9">
                     <p style="margin-top:.5rem">Quickly test and visualize your <a href="https://kubernetes.io/docs/concepts/configuration/secret/" target="_blank" style="color:#FA58B6">Kubernetes Secret</a> live.</p>
-                    <p style="margin-top:.2rem"><a href="https://michael-act.github.io/kubernetes-secret-editor/what-is-this/" style="color:#FA58B6">What is this?</a> – <a href="https://github.com/michaelact/kubernetes-secret-editor" style="color:#FA58B6">How does this work?</a></p>
+                    <p style="margin-top:.2rem"><a href="https://michael-act.github.io/kubernetes-secret-editor/what-is-this/" style="color:#FA58B6">What is this?</a> – <a href="https://github.com/michael-act/kubernetes-secret-editor" style="color:#FA58B6">How does this work?</a></p>
                 </span>
             </div>
         </section>
